# llm_bot

./: LICENSE  README.md  app.py  app_zmq.py  pyproject.toml
src/llm_bot/: crew.py  main.py
src/llm_bot/config/: agents.yaml  tasks.yaml
src/llm_bot/tools/: conversion_tools.py
